fixed whitespace

--- a/style.css
+++ b/style.css
@@ -670,7 +670,9 @@ margin-bottom: -23rem;
 
   @media (max-width:850px) {
 
-                
+                * {
+                  overflow: hidden !important;
+                }
 
     
       header {
